--- a/sperm_config.ini
+++ b/sperm_config.ini
@@ -1,26 +1,27 @@
 [simulation]
-shape = drop
+shape = cube
 spot_angle = 50.0
-vol = 100.0
-sperm_conc = 3160.0
-vsl = 130000000000000.0
-deviation = 0.1
-surface_time = 4.0
+vol = 6.25
+sperm_conc = 10000.0
+vsl = 130.0
+deviation = 0.4
+surface_time = 2.0
 egg_localization = bottom_center
-gamete_r = 0.15
+gamete_r = 0.04
 sim_min = 1.0
 sample_rate_hz = 4.0
-seed_number = 0
+seed_number = 1081336099
 sim_repeat = 1
-display_mode = movie
-drop_r = 2.8794119114848606
-egg_center = [ 0.          0.         -2.72941191]
+display_mode = 2D
+edge = 1.8420157493201932
+egg_center = [0.   0.   0.04]
 limit = 1e-09
-step_length = 520000000000.0
-x_max = 2.8794119114848606
-x_min = -2.8794119114848606
-y_max = 2.8794119114848606
-y_min = -2.8794119114848606
-z_max = 2.8794119114848606
-z_min = -2.8794119114848606
+number_of_sperm = 62
+step_length = 0.52
+x_max = 0.9210078746600966
+x_min = -0.9210078746600966
+y_max = 0.9210078746600966
+y_min = -0.9210078746600966
+z_max = 1.8420157493201932
+z_min = 0.0
 
